typo scenariostøtte for barn tekster for barnetillegg.